erDiagram
    PRODUCT ||--o{ PRODUCT_OPTION : has
    PRODUCT_OPTION ||--o{ STOCK_HISTORY : tracks
    PRODUCT_OPTION ||--o{ ORDER_ITEM : included_in
    PRODUCT_OPTION ||--o{ CART_ITEM : included_in
    COUPON ||--o{ USER_COUPON : issued_to
    USER_COUPON ||--o{ ORDER : used_in
    ORDER ||--o{ ORDER_ITEM : contains
    CART ||--o{ CART_ITEM : contains

    PRODUCT {
        BIGINT id PK
        VARCHAR name
        INT price
        VARCHAR status
        DATETIME created_at
        DATETIME updated_at
    }

    PRODUCT_OPTION {
        BIGINT id PK
        BIGINT product_id FK
        VARCHAR color
        VARCHAR size
        INT stock
        BIGINT version
        DATETIME created_at
        DATETIME updated_at
    }

    STOCK_HISTORY {
        BIGINT id PK
        BIGINT product_option_id FK
        INT change_qty
        VARCHAR reason
        DATETIME created_at
        DATETIME updated_at
    }

    COUPON {
        BIGINT id PK
        VARCHAR code
        INT discount_amount
        INT total_quantity
        INT issued_quantity
        BIGINT version
        DATETIME valid_from
        DATETIME valid_until
        DATETIME created_at
        DATETIME updated_at
    }

    USER_COUPON {
        BIGINT id PK
        BIGINT user_id
        BIGINT coupon_id FK
        DATETIME issued_at
        DATETIME used_at
        VARCHAR status
        DATETIME created_at
        DATETIME updated_at
    }

    ORDER {
        BIGINT id PK
        BIGINT user_id
        VARCHAR status
        INT total_amount
        INT discount_amount
        BIGINT user_coupon_id FK
        DATETIME created_at
        DATETIME updated_at
    }

    ORDER_ITEM {
        BIGINT id PK
        BIGINT order_id FK
        BIGINT product_option_id FK
        INT quantity
        INT price
        DATETIME created_at
        DATETIME updated_at
    }

    CART {
        BIGINT id PK
        BIGINT user_id
        DATETIME created_at
        DATETIME updated_at
    }

    CART_ITEM {
        BIGINT id PK
        BIGINT cart_id FK
        BIGINT product_option_id FK
        INT quantity
        DATETIME created_at
        DATETIME updated_at
    }
